# Freeekyyy-BOt

./: .gitignore  LICENSE  README.MD  app.py  main.py  pyproject.toml  rag.py  requirements.txt
research/: langchain.ipynb
